Add parameter to set puppet or pe version for validation run

--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,19 @@
 ---
 name: action-pdk-validate
 description: Runs `pdk validate` on your puppet module code
+inputs:
+  puppet-version:
+    description: A string indicating the Puppet version to validate against, such as "5.4.2" or "5.5".
+    required: false
+  pe-version:
+    description: A string indicating the PE version to validate against, such as "2017.3.5" or "2018.1".
+    required: false
 branding:
   icon: check-square
   color: orange
 runs:
   using: docker
   image: Dockerfile
+  env:
+    PUPPET_VERSION: ${{ inputs.puppet-version }}
+    PE_VERSION: ${{ inputs.pe-version }}
